css/style.css
/* Variables */
:root {
  --clr-accent: hsl(150, 100%, 66%);
  --clr-primary: hsl(193, 38%, 86%);
  --clr-bg: hsl(218, 23%, 16%);
  --clr-cardbg: hsl(217, 19%, 24%);
  --clr-neutural: hsl(217, 19%, 38%);
  --ff-primary: "Manrope", sans-serif;
  --fs-primary: 28px;
  --fw-extra-bold: 800;
}

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
* {
  margin: 0;
  padding: 0;
  font: inherit;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

html,
body {
  height: 100%;
}

/* Set core body defaults */
body {
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture,
svg,
video,
canvas {
  max-width: 100%;
  display: block;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* *********************************** */
.main-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  min-height: 100%;
  background-color: var(--clr-bg);
  font-family: var(--ff-primary);
  font-weight: var(--fw-extra-bold);
}
.card-container {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  gap: 1.375rem;
  padding: 2.5rem 1.25rem 4.5625rem 1.25rem;
  max-width: 21.25rem;
  background-color: var(--clr-cardbg);
  border-radius: 0.625rem;
}
.card-title {
  color: var(--clr-accent);
  text-transform: uppercase;
  font-size: 0.75rem;
  letter-spacing: 0.3125rem;
}
.advice-container {
  color: var(--clr-primary);
  font-size: 1.5rem;
  line-height: 1.4;
  letter-spacing: 0.05rem;
}
.dice-container {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--clr-accent);
  width: 4.125rem;
  height: 4.125rem;
  border-radius: 50%;
  bottom: -2.0625rem;
  transition: 0.8s;
}
.dice-container:active {
  filter: drop-shadow(0rem 0rem 1rem var(--clr-accent));
  transition: 0s;
}
.dice-container:hover {
  cursor: pointer;
  filter: drop-shadow(0rem 0rem 1rem var(--clr-accent));
}

/* *************************************************** */

@media screen and (min-width: 48rem) {
  /* desktop */
  .card-container {
    max-width: 33.75rem;
    padding-right: 2.5rem;
    padding-left: 2.5rem;
    padding-top: 3.125rem;
    gap: 1.875rem;
  }
  .advice-container {
    font-size: 1.75rem;
  }
}

